--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-<img src="goku.jpg">
+
+<!DOCTYPE html>
+<html>
+<body>
+<h1>Hello World, my name is nunya</h1>
+  <img src = "goku.jpg">
+</body>
+</html>
