--- a/index.html
+++ b/index.html
@@ -1,8 +1,94 @@
 
+
+
+
 <!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World, my name is nunya</h1>
-  <img src = "goku.jpg">
-</body>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>Hugo's Site</title>
+    <meta name="description" content="Your Webpage Description">
+    <meta name="author" content="Hugo Ordonez">
+
+    <!-- Enable responsive viewport -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Le HTML5 shim, for IE6-8 support of HTML elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+
+    <!-- Le styles -->
+    <!-- For now, feel free to just keep this as is. These are stylesheets that set up things like the font -->
+
+    <link href="https://kbroman.org/simple_site/assets/themes/twitter/bootstrap/css/bootstrap.2.2.2.min.css" rel="stylesheet">
+    <link href="https://kbroman.org/simple_site/assets/themes/twitter/css/style.css?body=1" rel="stylesheet" type="text/css" media="all">
+    <link href="https://kbroman.org/simple_site/assets/themes/twitter/css/kbroman.css" rel="stylesheet" type="text/css" media="all">
+
+    <!-- Le fav and touch icons -->
+
+    <!-- atom & rss feed -->
+    <link href="https://kbroman.org/simple_sitenil" type="application/atom+xml" rel="alternate" title="Sitewide ATOM Feed">
+    <link href="https://kbroman.org/simple_sitenil" type="application/rss+xml" rel="alternate" title="Sitewide RSS Feed">
+
+  </head>
+
+  <body>
+    <div class="navbar">
+      <div class="navbar-inner">
+        <div class="container-narrow">
+          <a class="brand" href="https://hugobski.github.io/">Hugobski's Site</a>
+        </div>
+      </div>
+    </div>
+
+    <div class="container-narrow">
+
+      <div class="content">
+        
+
+<div class="page-header">
+  <font color="orange"> <h2>Hugobski's Site</font></h2>
+</div>
+
+<div class="row-fluid">
+  <div class="span12">
+    <p> Welcome to my webpage. My name is Hugo Ordonez and I'm a student at DSST CVHS  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
+    <p> See me if you want to talk about some bomb ass bitches sko buffs and parties hmu ot </p>
+      <img src="http://www.steamgirlsvt.com/uploads/9/1/8/5/91858342/published/img-4744-l.jpeg?1526583168">
+<div class="page-header">
+  <font color="orange"> <h2>My Projects  </font></h2>
+</div>
+
+<p>Here are a few projects that I am proud of.</p>
+
+<ul>
+    <li><a href="http://www.steamgirlsvt.com/the-team.html">Steam Girls</a></li>
+    <li><a href="silkscreenprints.html">Silk Screen Prints</a></li>
+  <li><a href="processingproject.html">Processing Project</a></li>
+    <li><a href="myfavoritestudent.html">Click to see who my favorite student is</a></li>
+
+</ul>
+
+
+  </div>
+</div>
+<div class="page-header">
+  <font color="orange"> <h2>My Resume  </font></h2>
+</div>
+
+
+      </div>
+      <hr>
+      <footer>
+        <p><small>
+          <a href="https://creativecommons.org/publicdomain/zero/1.0/"><img src="https://i.creativecommons.org/p/zero/1.0/88x31.png" alt="CC0"/></a> &nbsp;
+        </small></p>
+      </footer>
+
+    </div>
+
+    
+  </body>
 </html>
+
