--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="row-fluid">
   <div class="span12">
     <p> Welcome to my webpage. My name is Hugo Ordonez and I'm a student at DSST CVHS  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
-    <p> See me if you want to talk about some bomb ass bitches sko buffs and parties hmu ot </p>
+    <p> See me if you want to talk about soccer, parties, music, or life i got you😘 </p>
       <img src="http://www.steamgirlsvt.com/uploads/9/1/8/5/91858342/published/img-4744-l.jpeg?1526583168">
 <div class="page-header">
   <font color="orange"> <h2>My Projects  </font></h2>
