--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="span12">
     <p> Welcome to my webpage. My name is Hugo Ordonez and I'm a student at DSST CVHS  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
     <p> See me if you want to talk about soccer, parties, music, or life i got you😘 </p>
-      <img src="http://www.steamgirlsvt.com/uploads/9/1/8/5/91858342/published/img-4744-l.jpeg?1526583168">
+      <img src="goku.jpeg">
 <div class="page-header">
   <font color="orange"> <h2>My Projects  </font></h2>
 </div>
