--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
 <div class="row-fluid">
   <div class="span12">
-    <p> Welcome to my webpage. My name is Hugo Ordonez and I'm a student at DSST CVHS  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
+    <p> Welcome to my webpage. My name is Hugo Ordonez and I'm a student at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
     <p> See me if you want to talk about soccer, parties, music, or life i got you😘 </p>
       <img src="goku.jpeg">
 <div class="page-header">
@@ -63,7 +63,7 @@
 <p>Here are a few projects that I am proud of.</p>
 
 <ul>
-    <li><a href="http://www.steamgirlsvt.com/the-team.html">Steam Girls</a></li>
+    <li><a href="https://www.tinkercad.com/things/jUIlj5kSOP6-build-a-tinkercad-house/edit?lessonid=ERNKJGKIQFHFEPK&projectid=OG2TEUVIQFHI7DT#/lesson-viewer">Dream House</a></li>
     <li><a href="silkscreenprints.html">Silk Screen Prints</a></li>
   <li><a href="processingproject.html">Processing Project</a></li>
     <li><a href="myfavoritestudent.html">Click to see who my favorite student is</a></li>
