--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <div class="row-fluid">
   <div class="span12">
     <p> Welcome to my webpage. My name is Hugo Ordonez and I'm a student at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
-    <p> See me if you want to talk about soccer, parties, music, or life i got you😘 </p>
+    <p> See me if you want to talk about soccer, parties, music, or life i got you😘 Amosc: r3ckeles_s4vag3 </p>
       <img src="goku.jpeg">
 <div class="page-header">
   <font color="orange"> <h2>My Projects  </font></h2>
@@ -64,8 +64,8 @@
 
 <ul>
     <li><a href="https://www.tinkercad.com/things/jUIlj5kSOP6-build-a-tinkercad-house/edit?lessonid=ERNKJGKIQFHFEPK&projectid=OG2TEUVIQFHI7DT#/lesson-viewer">Dream House</a></li>
-    <li><a href="silkscreenprints.html">Silk Screen Prints</a></li>
-  <li><a href="processingproject.html">Processing Project</a></li>
+    <li><a href="https://www.adidas.com/us/predator-19.1-firm-ground-cleats/BC0550.html">Mmmm Chicken</a></li>
+  <li><a href="eduardobelmares.github.io">Visit the broski</a></li>
     <li><a href="myfavoritestudent.html">Click to see who my favorite student is</a></li>
 
 </ul>
