--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 <ul>
     <li><a href="https://www.tinkercad.com/things/jUIlj5kSOP6-build-a-tinkercad-house/edit?lessonid=ERNKJGKIQFHFEPK&projectid=OG2TEUVIQFHI7DT#/lesson-viewer">Dream House</a></li>
-    <li><a href="https://www.adidas.com/us/predator-19.1-firm-ground-cleats/BC0550.html">Mmmm Chicken</a></li>
+    <li><a href="https://www.youtube.com/watch?v=BuNRzo9REH8">Just CLick it😂</a></li>
   <li><a href="https://eduardobelmares.github.io/">Visit the broski</a></li>
     <li><a href="myfavoritestudent.html">Click to see who my favorite student is</a></li>
 
