--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   <div class="span12">
     <p> Welcome to my webpage. My name is Hugo Ordonez and I'm a student at  <a class="brand" href="https://www.dsstpublicschools.org/college-view-high-school">DSST College View High School</a>.</p>
     <p> See me if you want to talk about soccer, parties, music, or life i got you😘 Amosc: r3ckeles_s4vag3 </p>
-      <img src="goku.jpeg">
+      <img src="goku.jpg">
 <div class="page-header">
   <font color="orange"> <h2>My Projects  </font></h2>
 </div>
