--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <li><a href="https://www.tinkercad.com/things/jUIlj5kSOP6-build-a-tinkercad-house/edit?lessonid=ERNKJGKIQFHFEPK&projectid=OG2TEUVIQFHI7DT#/lesson-viewer">Dream House</a></li>
     <li><a href="https://www.youtube.com/watch?v=BuNRzo9REH8">Just CLick it😂</a></li>
   <li><a href="https://eduardobelmares.github.io/">Visit the broski</a></li>
-    <li><a href="myfavoritestudent.html">Click to see who my favorite student is</a></li>
+    <li><a href="https://elgoog.im/t-rex/">Talk to me when you get 3000</a></li>
 
 </ul>
 
