--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <li><a href="https://www.youtube.com/watch?v=BuNRzo9REH8">Just CLick it😂</a></li>
   <li><a href="https://eduardobelmares.github.io/">Visit the broski</a></li>
     <li><a href="https://elgoog.im/t-rex/">Talk to me when you get 3000</a></li>
-  <a href="nameoffile.html">Extra file</a>
+  <li><a href="nameoffile.html">Extra file</a>
 
 </ul>
 
