--- a/summative.html
+++ b/summative.html
@@ -1,1 +1,5 @@
-# This is a summative page
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <title>This is a summative page</title>
