--- a/summative.html
+++ b/summative.html
@@ -3,3 +3,5 @@
   <head>
     <meta charset="utf-8">
     <title>This is a summative page</title>
+<meta name="description" content="Your Webpage Description">
+    <meta name="author" content="Hugo Ordonez">
